CLUB-AI-ML Leaderboard

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🏆 ECA-ML-Club Leaderboard</h1>
+            <h1>🏆 CLUB-AI-ML Leaderboard</h1>
             <p>Tracking contributions and achievements across the organization</p>
         </header>
 
